# swift-cpp

./: .gitignore  CppBridgeTest-Bridging-Header.h  README.md  c_interface.cpp  c_interface.h  contacts.cpp  contacts.hpp
Contacts.xcodeproj/: project.pbxproj
Contacts.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Contacts.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcschemes/: xcschememanagement.plist
Contacts/Contacts/: Contacts.h
Contacts/Contacts.xcodeproj/: project.pbxproj
CppBridgeTest/: AppDelegate.swift
CppBridgeTest.xcodeproj/: project.pbxproj
CppBridgeTest.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcschemes/: xcschememanagement.plist
CppBridgeTest/Base.lproj/: MainMenu.xib
libContacts/: CMakeLists.txt  contacts.cpp
libContacts/libContacts.framework/: libContacts
libContacts/libContacts.framework/Versions/A/: libContacts
libContacts/libContacts.framework/Versions/A/Resources/: Info.plist
